project(unit_tests)
enable_testing()


find_package(Boost REQUIRED COMPONENTS unit_test_framework)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIRS})


add_executable(main_test_suite main_test_suite.cpp $<TARGET_OBJECTS:smoldock_object> UnitTestHelper.cpp UnitTestHelper.h)

target_link_libraries(main_test_suite ${Boost_LIBRARIES})

# RDKit lib*.so
TARGET_LINK_LIBRARIES(main_test_suite RDKitAlignment RDKitForceFieldHelpers RDKitRDBoost RDKitCatalogs RDKitForceField RDKitRDGeneral RDKitChemicalFeatures RDKitFragCatalog RDKitRDGeometryLib RDKitChemReactions RDKitGraphMol RDKitReducedGraphs RDKitChemTransforms RDKithc RDKitRGroupDecomposition RDKitDataStructs RDKitInfoTheory RDKitShapeHelpers RDKitDepictor RDKitMMPA RDKitSimDivPickers RDKitDescriptors RDKitMolAlign RDKitSLNParse RDKitDistGeometry RDKitMolCatalog RDKitSmilesParse RDKitDistGeomHelpers RDKitMolChemicalFeatures RDKitStructChecker RDKitEigenSolvers RDKitMolDraw2D RDKitSubgraphs RDKitFileParsers RDKitMolHash RDKitSubstructLibrary RDKitFilterCatalog RDKitMolTransforms RDKitSubstructMatch RDKitFingerprints RDKitOptimizer RDKitTrajectory RDKitFMCS RDKitPartialCharges)
